fix dark mode font color for lists

--- a/src/components/Layout/DarkMode.scss
+++ b/src/components/Layout/DarkMode.scss
@@ -41,7 +41,7 @@ body.dark .post-page-wrapper {
         }
 
         li {
-            color: #ffffff !important;
+            color: #d4d4d4 !important;
         }
 
         p {
